add post category section

--- a/index.html
+++ b/index.html
@@ -81,5 +81,17 @@
         </div>
 
     </section>
+
+    <section class="category">
+
+        <h3>Categorias de postagem</h3>
+        <div class="category_cards">
+            <div class="catcard"><a href="#">Linguagem de Programação</a></div>
+            <div class="catcard"><a href="#">CSS</a></div>
+            <div class="catcard"><a href="#">Aplicações Mobile</a></div>
+            <div class="catcard"><a href="#">Entrevista de Emprego</a></div>
+        </div>
+
+    </section>
 </body>
 </html>
