added new contact section

--- a/index.html
+++ b/index.html
@@ -90,8 +90,22 @@
             <div class="catcard"><a href="#">CSS</a></div>
             <div class="catcard"><a href="#">Aplicações Mobile</a></div>
             <div class="catcard"><a href="#">Entrevista de Emprego</a></div>
-        </div>
 
+        </div>
+        <div class="see_more"><a href="#"> Ver Mais </a><img src="assets/arrow-right.svg" alt=""></div>
+
+    </section>
+    <section class="contact">
+        <form action="post">
+            <label for="name"></label>
+            <input placeholder="Nome" type="text" name="name" id="">
+
+            <label for="email"></label>
+            <input placeholder="E-mail" type="text" name="email">
+
+            <label for="subject"></label>
+            <textarea placeholder="Assunto" name="subject" id="" cols="30" rows="10"></textarea>
+        </form>
     </section>
 </body>
 </html>
