--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Desafio RocketBlog</title>
 </head>
 <body>
@@ -23,6 +24,25 @@
                 <input placeholder="Buscar" type="search" name="search_bar" id="search_bar_nav">
                 <button class="search_btn"type="submit"><img src="assets/search.svg" alt=""></button>
             </div>
+
+            <div class="mobile_nav_btn">
+                <a href="javascript:void(0);" onclick="openMenu()">
+                <button>
+                    <span class="material-symbols-outlined">menu</span>
+                </button></a>
+
+                <div class="mobile_nav">
+                    <ul class="mobile_nav_itens">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Sobre</a></li>
+                        <li><a href="#category">Categorias</a></li>
+                        <li><a href="#contact">Contato</a></li>
+                    </ul>
+                </div>
+            </div>
+
+
+
         </nav>
         <div class="top_content">
             <div class="top_content_left">
@@ -113,5 +133,7 @@
     <footer>
         <p>Esse projeto foi desenvolvido durante o programa Discover da <a target="_blank" href="https://rocketseat.com.br">Rocketseat</a> por <a target="_blank" href="https://github.com/SirD007/">SirD007</a></p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
